--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,5 @@ $theme-colors: map-merge($theme-colors, (
 
 // set changes
 @import "../node_modules/bootstrap/scss/bootstrap";
+/* Importing Bootstrap SCSS file. */
+@import 'bootstrap/scss/bootstrap';
