--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,16 +11,4 @@
 
 <button type="button" class="btn btn-link">Link</button>
 
-<div class="container" id="main-container">
-  <div class="row my-3">
-    <div *ngFor="let book of books" class="col=md-6 col-xl-3">
-      <div class="card text-center" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">{{book.name}}</h5>
-          <p class="card-text">{{book.author}}</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+<app-book-card></app-book-card>
