--- a/src/app/book-card/book-card.component.html
+++ b/src/app/book-card/book-card.component.html
@@ -1,1 +1,13 @@
-<p>book-card works!</p>
+<div class="container" id="main-container">
+  <div class="row my-3">
+    <div *ngFor="let book of books" class="col=md-6 col-xl-3">
+      <div class="card text-center" style="width: 18rem;">
+        <div class="card-body">
+          <h5 class="card-title">{{book.name}}</h5>
+          <p class="card-text">{{book.author}}</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
