--- a/src/app/book-card/book-card.component.html
+++ b/src/app/book-card/book-card.component.html
@@ -6,6 +6,7 @@
           <h5 class="card-title">{{book.name}}</h5>
           <p class="card-text">{{book.author}}</p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
+          <button class="btn btn-lg btn-outline-primary" (click)="openDeleteModal(book)">Launch demo modal</button>
         </div>
       </div>
     </div>
