--- a/src/app/book-card/book-card.component.html
+++ b/src/app/book-card/book-card.component.html
@@ -5,10 +5,13 @@
         <div class="card-body">
           <h5 class="card-title">{{book.name}}</h5>
           <p class="card-text">{{book.author}}</p>
-          <a href="#" class="btn btn-primary">No, keep this book</a>
-          <button class="btn btn-lg btn-outline-primary" (click)="openDeleteModal(book)">Launch demo modal</button>
+          <button type="button" class="btn btn-primary mx-2" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">Edit book</button>
+          <app-book-edit-modal></app-book-edit-modal>
+          <button class="btn btn-outline-danger" (click)="openDeleteModal(book)">Delete book</button>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+
