--- a/src/app/book-card/book-card.component.html
+++ b/src/app/book-card/book-card.component.html
@@ -6,7 +6,7 @@
           <h5 class="card-title">{{book.name}}</h5>
           <p class="card-text">{{book.author}}</p>
           <button type="button" class="btn btn-primary mx-2" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">Edit book</button>
-          <app-book-edit-modal [editableBook]="book" [bookService]="bookService" (someEvent)="getBooks()"></app-book-edit-modal>
+          <app-book-edit-modal [editableBook]="book" (updateBookEvent)="updateBook"></app-book-edit-modal>
           <button class="btn btn-outline-danger" (click)="openDeleteModal(book)">Delete book</button>
         </div>
       </div>
