--- a/src/app/book-edit-modal/book-edit-modal.component.html
+++ b/src/app/book-edit-modal/book-edit-modal.component.html
@@ -36,7 +36,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button (click)="onUpdateBook(editForm.value)" type="button" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
+        <button (click)="updateBook(editForm.value)" type="button" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
       </div>
     </div>
   </div>
