--- a/src/app/book-card/book-card.component.html
+++ b/src/app/book-card/book-card.component.html
@@ -14,4 +14,9 @@
   </div>
 </div>
 
+<div class="container">
+  <button type="button" class="btn btn-primary mx-2" data-bs-toggle="modal" data-bs-target="#addBookModal" data-bs-whatever="@getbootstrap">Add new books</button>
+  <app-book-add-modal (addBookEvent)="onAddBook($event)"></app-book-add-modal>
+</div>
+
 
