Add completely working feature of adding book

--- a/src/app/book-add-modal/book-add-modal.component.html
+++ b/src/app/book-add-modal/book-add-modal.component.html
@@ -16,7 +16,7 @@
           <input type="text" ngModel class="form-control" id="author" name="author">
         </div>
         <div class="mb-3">
-          <label for="yearOfPublication" class="col-form-label">YearOfPublication</label>
+          <label for="yearOfPublication" class="col-form-label">Year of publication</label>
           <input type="number" ngModel class="form-control" id="yearOfPublication" name="yearOfPublication">
         </div>
         <div class="mb-3">
@@ -26,7 +26,7 @@
       </form>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button (click)="addBook(addForm)" type="submit" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
+        <button (click)="addBook(addForm)" type="submit" class="btn btn-primary" data-bs-dismiss="modal">Add new book</button>
       </div>
     </div>
   </div>
