--- a/src/app/book-card/book-card.component.html
+++ b/src/app/book-card/book-card.component.html
@@ -10,8 +10,8 @@
                 <p class="card-text">{{book.author}}</p>
                 <button type="button" class="btn btn-primary mx-2" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">Edit book</button>
                 <app-book-edit-modal [editableBook]="book" (updateBookEvent)="onUpdateBook($event)"></app-book-edit-modal>
-                <button class="btn btn-outline-danger" (click)="openDeleteModal(book)">Delete book</button>
-                <app-book-delete-modal></app-book-delete-modal>
+                <!-- <button class="btn btn-outline-danger" (click)="openDeleteModal(book)">Delete book</button> -->
+                <app-book-delete-modal class="btn btn-outline-danger" [deletedBook]="book" (deleteBookEvent)="onDeleteBook($event)">Delete book</app-book-delete-modal>
               </div>
             </div>
           </div>
