--- a/src/app/book-delete-modal/book-delete-modal.component.html
+++ b/src/app/book-delete-modal/book-delete-modal.component.html
@@ -1,11 +1,18 @@
-<div class="modal-header">
-  <h4 class="modal-title">Delete {{deleteBook.name}}</h4>
-  <button type="button" class="btn-close" aria-label="Close" (click)="activeModal.dismiss('Cross click')"></button>
-</div>
-<div class="modal-body">
-  <p>Do you really want to delete?</p>
-</div>
-<div class="modal-footer">
-  <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
-  <button type="button" class="btn btn-outline-dark" (click)="deleteBook()">Delete</button>
+<div class="modal fade" id="deleteBookModal" tabindex="-1" aria-labelledby="deleteBookModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title">Delete {{deletedBook.name}}</h4>
+        <button type="button" class="btn-close" aria-label="Close"
+          (click)="activeModal.dismiss('Cross click')"></button>
+      </div>
+      <div class="modal-body">
+        <p>Do you really want to delete?</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
+        <button type="button" class="btn btn-outline-dark" (click)="deleteBook()">Delete</button>
+      </div>
+    </div>
+  </div>
 </div>
