--- a/src/app/main-navbar/main-navbar.component.html
+++ b/src/app/main-navbar/main-navbar.component.html
@@ -25,7 +25,10 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+          <a class="nav-link disabled" href="/login">Login</a>
+        </li>
+        <li>
+          <a class="nav-link disabled" href="/sign-up">Sign up</a>
         </li>
       </ul>
       <form class="d-flex" role="search">
