--- a/src/app/book-delete-modal/book-delete-modal.component.html
+++ b/src/app/book-delete-modal/book-delete-modal.component.html
@@ -16,3 +16,22 @@
     </div>
   </div>
 </div>
+
+<div class="modal fade" id="deleteBookModal" tabindex="-1" aria-labelledby="deleteBookModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="addBookModalLabel">Delete {{deletedBook.name}}?</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <!-- <div class="modal-footer">
+        <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
+        <button type="button" class="btn btn-outline-dark" (click)="deleteBook()">Delete</button>
+      </div> -->
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+        <button (click)="deleteBook()" type="submit" class="btn btn-primary" data-bs-dismiss="modal">Add new book</button>
+      </div>
+    </div>
+  </div>
+</div>  
