--- a/src/app/book-delete-modal/book-delete-modal.component.html
+++ b/src/app/book-delete-modal/book-delete-modal.component.html
@@ -2,35 +2,12 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title">Delete {{deletedBook.name}}</h4>
-        <button type="button" class="btn-close" aria-label="Close"
-          (click)="activeModal.dismiss('Cross click')"></button>
-      </div>
-      <div class="modal-body">
-        <p>Do you really want to delete?</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
-        <button type="button" class="btn btn-outline-dark" (click)="deleteBook()">Delete</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="modal fade" id="deleteBookModal" tabindex="-1" aria-labelledby="deleteBookModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
         <h1 class="modal-title fs-5" id="addBookModalLabel">Delete {{deletedBook.name}}?</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
-      <!-- <div class="modal-footer">
-        <button type="button" class="btn btn-outline-dark" (click)="activeModal.close('Close click')">Close</button>
-        <button type="button" class="btn btn-outline-dark" (click)="deleteBook()">Delete</button>
-      </div> -->
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button (click)="deleteBook()" type="submit" class="btn btn-primary" data-bs-dismiss="modal">Add new book</button>
+        <button (click)="deleteBook()" type="submit" class="btn btn-primary" data-bs-dismiss="modal">Delete book</button>
       </div>
     </div>
   </div>
