--- a/src/app/book-add-modal/book-add-modal.component.html
+++ b/src/app/book-add-modal/book-add-modal.component.html
@@ -1,32 +1,34 @@
 <div class="modal fade" id="addBookModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="addBookModalLabel">Add new book</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <form #addForm="ngForm" (ngSubmit)="addBook(addForm)">
-        <div class="mb-3">
-          <label for="name" class="col-form-label">Name</label>
-          <input type="text" ngModel class="form-control" id="name" name="name">
+      <div class="container">
+        <div class="modal-header">
+          <h1 class="modal-title fs-5" id="addBookModalLabel">Add new book</h1>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <!-- <input type="hidden" ngModel class="form-control" id="id" name="id"> -->
-        <div class="mb-3">
-          <label for="author" class="col-form-label">Author</label>
-          <input type="text" ngModel class="form-control" id="author" name="author">
+        <form #addForm="ngForm" (ngSubmit)="addBook(addForm)">
+          <div class="mb-3">
+            <label for="name" class="col-form-label">Name</label>
+            <input type="text" ngModel class="form-control" id="name" name="name">
+          </div>
+          <!-- <input type="hidden" ngModel class="form-control" id="id" name="id"> -->
+          <div class="mb-3">
+            <label for="author" class="col-form-label">Author</label>
+            <input type="text" ngModel class="form-control" id="author" name="author">
+          </div>
+          <div class="mb-3">
+            <label for="yearOfPublication" class="col-form-label">Year of publication</label>
+            <input type="number" ngModel class="form-control" id="yearOfPublication" name="yearOfPublication">
+          </div>
+          <div class="mb-3">
+            <label for="genre" class="col-form-label">Genre</label>
+            <input type="text" ngModel class="form-control" id="genre" name="genre">
+          </div>
+        </form>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button (click)="addBook(addForm)" type="submit" class="btn btn-primary" data-bs-dismiss="modal">Add new book</button>
         </div>
-        <div class="mb-3">
-          <label for="yearOfPublication" class="col-form-label">Year of publication</label>
-          <input type="number" ngModel class="form-control" id="yearOfPublication" name="yearOfPublication">
-        </div>
-        <div class="mb-3">
-          <label for="genre" class="col-form-label">Genre</label>
-          <input type="text" ngModel class="form-control" id="genre" name="genre">
-        </div>
-      </form>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        <button (click)="addBook(addForm)" type="submit" class="btn btn-primary" data-bs-dismiss="modal">Add new book</button>
       </div>
     </div>
   </div>
