Change layout of book-edit template for better pretty-looking

--- a/src/app/book-edit-modal/book-edit-modal.component.html
+++ b/src/app/book-edit-modal/book-edit-modal.component.html
@@ -2,7 +2,8 @@
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-      <div class="modal-header">
+      <div class="container">
+              <div class="modal-header">
         <h1 class="modal-title fs-5" id="exampleModalLabel">Edit {{editableBook.name}}</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
@@ -28,6 +29,7 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
         <button (click)="updateBook(editForm.value)" type="button" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
+      </div>
       </div>
     </div>
   </div>
