--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,6 @@ $theme-colors: map-merge($theme-colors, (
 
 // set changes
 @import "../node_modules/bootstrap/scss/bootstrap";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
