Replace old design of login page with new one

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <h1>Login</h1>
 
-<form (ngSubmit)="login()" class="form-horizontal" #loginForm="ngForm">
+<!-- <form (ngSubmit)="login()" class="form-horizontal" #loginForm="ngForm">
     <p>
         <mat-form-field>
             <mat-label>Username</mat-label>
@@ -16,6 +16,60 @@
     <p>
         <button mat-raised-button type="submit" [disabled]="!loginForm.form.valid">Login</button>
     </p>
-</form>
+</form> -->
 
 <p>{{message}}</p>
+
+<form (ngSubmit)="login()" #loginForm="ngForm">
+    <!-- Email input -->
+    <div class="form-outline mb-4">
+      <input type="text" id="username" name="username" class="form-control" [(ngModel)]="username" required/>
+      <label id="password" type="password" name="password" class="form-control" [(ngModel)]="password" required>Username</label>
+    </div>
+  
+    <!-- Password input -->
+    <div class="form-outline mb-4">
+      <input type="password" id="password" name="password" class="form-control" [(ngModel)]="password" required/>
+      <label class="form-label" for="password">Password</label>
+    </div>
+  
+    <!-- 2 column grid layout for inline styling -->
+    <div class="row mb-4">
+      <div class="col d-flex justify-content-center">
+        <!-- Checkbox -->
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
+          <label class="form-check-label" for="form2Example31"> Remember me </label>
+        </div>
+      </div>
+  
+      <div class="col">
+        <!-- Simple link -->
+        <a href="#!">Forgot password?</a>
+      </div>
+    </div>
+  
+    <!-- Submit button -->
+    <button class="btn btn-primary btn-block mb-4" type="submit" [disabled]="!loginForm.form.valid">Sign in</button>
+  
+    <!-- Register buttons -->
+    <div class="text-center">
+      <p>Not a member? <a href="#!">Register</a></p>
+      <p>or sign up with:</p>
+      <button type="button" class="btn btn-link btn-floating mx-1">
+        <i class="fab fa-facebook-f"></i>
+      </button>
+  
+      <button type="button" class="btn btn-link btn-floating mx-1">
+        <i class="fab fa-google"></i>
+      </button>
+  
+      <button type="button" class="btn btn-link btn-floating mx-1">
+        <i class="fab fa-twitter"></i>
+      </button>
+  
+      <button type="button" class="btn btn-link btn-floating mx-1">
+        <i class="fab fa-github"></i>
+      </button>
+    </div>
+  </form>
