Restructure BookCardComponent, so it is the only one this element on page now

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
 <app-main-navbar></app-main-navbar>
 
 
-<app-book-card></app-book-card>
+<!-- <app-book-card></app-book-card> -->
 
-<a (click)="logout()">Logout</a>
 
 <main>
     <router-outlet></router-outlet>
 </main>
+
+
+<a (click)="logout()">Logout</a>
