--- a/src/app/main-navbar/main-navbar.component.html
+++ b/src/app/main-navbar/main-navbar.component.html
@@ -28,8 +28,8 @@
           <a class="nav-link" href="/login">Login</a>
         </li>
         <li class="nav-item">
-          <!-- <a class="nav-link" (click)="logout()">Logout</a> -->
-          <button class="btn btn-outline-success" type="button" (click)="logout()">Logout</button>
+          <a class="nav-link" (click)="logout()" href="/">Logout</a>
+          <!-- <button class="btn btn-outline-success" type="button" (click)="logout()">Logout</button> -->
         </li>
         <li>
           <a class="nav-link disabled" href="/sign-up">Sign up</a>
