--- a/src/app/main-navbar/main-navbar.component.html
+++ b/src/app/main-navbar/main-navbar.component.html
@@ -24,14 +24,13 @@
             <li><a class="dropdown-item" href="#">Poetry</a></li>
           </ul>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="!authService.isLoggedIn()">
           <a class="nav-link" href="/login">Login</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="authService.isLoggedIn()">
           <a class="nav-link" (click)="logout()" href="/">Logout</a>
-          <!-- <button class="btn btn-outline-success" type="button" (click)="logout()">Logout</button> -->
         </li>
-        <li>
+        <li *ngIf="!authService.isLoggedIn()">
           <a class="nav-link disabled" href="/sign-up">Sign up</a>
         </li>
       </ul>
