--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<h1>Login</h1>
+<!-- <h1>Login</h1>
 
 <p>{{message}}</p>
 
@@ -15,45 +15,42 @@
         <label class="form-label" for="password">Password</label>
     </div>
   
-  
-  
-    <!-- 2 column grid layout for inline styling -->
-    <div class="row mb-4">
-      <div class="col d-flex justify-content-center">
-        <!-- Checkbox -->
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
-          <label class="form-check-label" for="form2Example31"> Remember me </label>
-        </div>
-      </div>
-  
-      <div class="col">
-        <!-- Simple link -->
-        <a href="#!">Forgot password?</a>
-      </div>
-    </div>
-  
-    <!-- Submit button -->
     <button class="btn btn-primary btn-block mb-4" type="submit" [disabled]="!loginForm.form.valid">Sign in</button>
   
-    <!-- Register buttons -->
-    <div class="text-center">
-      <p>Not a member? <a href="#!">Register</a></p>
-      <p>or sign up with:</p>
-      <button type="button" class="btn btn-link btn-floating mx-1">
-        <i class="fab fa-facebook-f"></i>
-      </button>
-  
-      <button type="button" class="btn btn-link btn-floating mx-1">
-        <i class="fab fa-google"></i>
-      </button>
-  
-      <button type="button" class="btn btn-link btn-floating mx-1">
-        <i class="fab fa-twitter"></i>
-      </button>
-  
-      <button type="button" class="btn btn-link btn-floating mx-1">
-        <i class="fab fa-github"></i>
-      </button>
+  </form> -->
+<section class="vh-100">
+  <div class="container py-5 h-100">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+        <div class="card shadow-2-strong" style="border-radius: 1rem;">
+          <div class="card-body p-5 text-center">
+
+            <h1>Login</h1>
+
+            <p>{{message}}</p>
+
+            <form (ngSubmit)="login()" #loginForm="ngForm">
+
+              <div class="form-outline mb-4">
+                <input type="text" id="username" name="username" class="form-control" [(ngModel)]="username" required />
+                <label for="username">Username</label>
+              </div>
+
+
+              <div class="form-outline mb-4">
+                <input type="password" id="password" name="password" class="form-control" [(ngModel)]="password"
+                  required />
+                <label class="form-label" for="password">Password</label>
+              </div>
+
+              <button class="btn btn-primary btn-block mb-4" type="submit" [disabled]="!loginForm.form.valid">Sign
+                in</button>
+
+            </form>
+
+          </div>
+        </div>
+      </div>
     </div>
-  </form>
+  </div>
+</section>
