--- a/src/app/main-navbar/main-navbar.component.html
+++ b/src/app/main-navbar/main-navbar.component.html
@@ -25,16 +25,16 @@
           </ul>
         </li>
         <li class="nav-item" *ngIf="!authService.isLoggedIn()">
-          <a class="nav-link" href="/login">Login</a>
+          <a class="nav-link" (click)="login()">Login</a>
         </li>
         <li class="nav-item" *ngIf="authService.isLoggedIn()">
-          <a class="nav-link" (click)="logout()" href="/">Logout</a>
+          <a class="nav-link" (click)="logout()">Logout</a>
         </li>
         <li *ngIf="!authService.isLoggedIn()">
-          <a class="nav-link disabled" href="/sign-up">Sign up</a>
+          <a class="nav-link disabled" (click)="signup()">Sign up</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
+      <form class="d-flex" role="search" *ngIf="authService.isLoggedIn()">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
