--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -5,11 +5,11 @@
         <div class="card shadow-2-strong" style="border-radius: 1rem;">
           <div class="card-body p-5 text-center">
 
-            <h1>Login</h1>
+            <h1>Sign up</h1>
 
             <p>{{message}}</p>
 
-            <form (ngSubmit)="login()" #loginForm="ngForm">
+            <form (ngSubmit)="register()" #loginForm="ngForm">
 
               <div class="form-outline mb-4">
                 <input type="text" id="username" name="username" class="form-control" [(ngModel)]="username" required />
@@ -24,7 +24,7 @@
               </div>
 
               <button class="btn btn-primary btn-block mb-4" type="submit" [disabled]="!loginForm.form.valid">Sign
-                in</button>
+                up</button>
 
             </form>
 
