Add feature to show coverImages for every book, if it exists

--- a/src/app/book-details/book-details.component.html
+++ b/src/app/book-details/book-details.component.html
@@ -1,4 +1,8 @@
 <div *ngIf="book">
+  <img *ngIf="book.coverImageUrl!=null" 
+  [src]="book.coverImageUrl || 'default/image/url/'" 
+  alt="{{ book.name }} cover" 
+  class="book-cover">
   <h2>{{ book.name }}</h2>
   <p>{{ book.author }}</p>
   <p>{{ book.yearOfPublication }}</p>
