--- a/src/app/comments/comments.component.html
+++ b/src/app/comments/comments.component.html
@@ -1,1 +1,10 @@
-<p>comments works!</p>
+<div>
+  <input [(ngModel)]="newCommentContent" placeholder="write a comment...">
+  <button (click)="addComment(newCommentContent)">Add Comment</button>
+</div>
+<div *ngFor="let comment of comments">
+  <p>{{ comment.commentText }}</p>
+  <button (click)="deleteComment(comment)">Delete</button>
+  <input [(ngModel)]="comment.commentText">
+  <button (click)="updateComment(comment)">Update</button>
+</div>
