--- a/src/app/main-navbar/main-navbar.component.html
+++ b/src/app/main-navbar/main-navbar.component.html
@@ -33,6 +33,14 @@
         <li *ngIf="!authService.isLoggedIn()">
           <a class="nav-link" (click)="signup()">Sign up</a>
         </li>
+        <li class="nav-item dropdown" *ngIf="authService.isLoggedIn()">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            User Cabinet
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <button class="dropdown-item" (click)="navigateToUserCabinet()">User Settings</button>
+          </div>
+        </li>
       </ul>
       <form class="d-flex" role="search" *ngIf="authService.isLoggedIn()">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
