--- a/src/app/main-navbar/main-navbar.component.html
+++ b/src/app/main-navbar/main-navbar.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Your library</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -19,7 +20,9 @@
           <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Fiction</a></li>
             <li><a class="dropdown-item" href="#">Non-fiction</a></li>
-            <li><hr class="dropdown-divider"></li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
             <li><a class="dropdown-item" href="#">Chanson de geste</a></li>
             <li><a class="dropdown-item" href="#">Poetry</a></li>
           </ul>
@@ -34,7 +37,8 @@
           <a class="nav-link" (click)="signup()">Sign up</a>
         </li>
         <li class="nav-item dropdown" *ngIf="authService.isLoggedIn()">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
             User Cabinet
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -42,10 +46,12 @@
           </div>
         </li>
       </ul>
-      <form class="d-flex" role="search" *ngIf="authService.isLoggedIn()">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+      <!-- <form class="d-flex" role="search" *ngIf="authService.isLoggedIn()" (ngSubmit)="search(searchText)">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" [(ngModel)]="searchText"
+          name="searchText">
         <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      </form> -->
+
     </div>
   </div>
 </nav>
