--- a/src/app/recommended-books/recommended-books.component.html
+++ b/src/app/recommended-books/recommended-books.component.html
@@ -1,14 +1,18 @@
-<h3>You may be interested in this</h3>
 
-<div class="container" id="main-container">
-  <div class="row my-3">
-    <div *ngFor="let book of books" class="col=md-6 col-xl-3">
-      <div class="card text-center" style="width: 18rem;">
-        <div class="card-body">
-          <h5 class="card-title">{{book.name}}</h5>
-          <p class="card-text">{{book.author}}</p>
+<div *ngIf="!authService.isLoggedIn()">
+  <h3>You may be interested in this</h3>
+
+  <div class="container" id="main-container">
+    <div class="row my-3">
+      <div *ngFor="let book of books" class="col=md-6 col-xl-3">
+        <div class="card text-center" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">{{book.name}}</h5>
+            <p class="card-text">{{book.author}}</p>
+          </div>
         </div>
       </div>
     </div>
   </div>
+  
 </div>
