--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 @import "../node_modules/bootstrap/scss/functions";
 @import "../node_modules/bootstrap/scss/variables";
 
-$primary: rgb(152, 24 ,25); // set the $primary variable
+$primary: rgb(142,3,0); // set the $primary variable
 
 // merge with existing $theme-colors map
 $theme-colors: map-merge($theme-colors, (
