Create a sign up component layout

--- a/src/app/main-navbar/main-navbar.component.html
+++ b/src/app/main-navbar/main-navbar.component.html
@@ -13,7 +13,7 @@
         <!-- <li class="nav-item">
           <a class="nav-link" href="#">Link</a>
         </li> -->
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Genres
           </a>
@@ -26,7 +26,7 @@
             <li><a class="dropdown-item" href="#">Chanson de geste</a></li>
             <li><a class="dropdown-item" href="#">Poetry</a></li>
           </ul>
-        </li>
+        </li> -->
         <li class="nav-item" *ngIf="!authService.isLoggedIn()">
           <a class="nav-link" (click)="login()">Login</a>
         </li>
