--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -109,7 +109,7 @@
 
             <p>{{message}}</p>
 
-            <form (ngSubmit)="register()" #loginForm="ngForm">
+            <form (ngSubmit)="onRegister()" #loginForm="ngForm">
 
               <div class="form-outline mb-4">
                 <input type="text" id="username" name="username" class="form-control" [(ngModel)]="username" required />
