--- a/src/app/comments/comments.component.html
+++ b/src/app/comments/comments.component.html
@@ -21,7 +21,7 @@
       <!-- Form for updating comment -->
       <form *ngIf="comment.id === editingCommentId" 
             (ngSubmit)="updateComment(comment.id, updatedCommentText); editingCommentId = null">
-        <input [(ngModel)]="comment.commentText" name="updatedCommentText" required>
+        <input [(ngModel)]="updatedCommentText" name="updatedCommentText" required>
         <button type="submit">Save</button>
         <button type="button" (click)="editingCommentId = null">Cancel</button>
       </form>
