--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -3,7 +3,7 @@
     name="searchText">
   <button class="btn btn-outline-success" type="submit">Search</button>
 </form>
-
+<!-- 
 <div class="container" id="main-container">
   <div class="row my-3">
     <div *ngFor="let book of books" class="col=md-6 col-xl-3">
@@ -13,7 +13,6 @@
           <p class="card-text">{{book.author}}</p>
           <button type="button" class="btn btn-primary mx-2" data-bs-toggle="modal" data-bs-target="#exampleModal" data-bs-whatever="@getbootstrap">Edit book</button>
           <app-book-edit-modal [editableBook]="book" (updateBookEvent)="onUpdateBook($event)"></app-book-edit-modal>
-          <!-- <button class="btn btn-outline-danger" (click)="openDeleteModal(book)">Delete book</button> -->
           <button type="button" class="btn btn-danger mx-2" data-bs-toggle="modal" data-bs-target="#deleteBookModal" data-bs-whatever="@getbootstrap">Delete book</button>
           <app-book-delete-modal [deletedBook]="book" (deleteBookEvent)="onDeleteBook($event)"></app-book-delete-modal>
           <button type="button" class="btn btn-secondary mx-2" data-bs-toggle="modal" data-bs-target="#addToFavorites" (click)="addToFavorites(book.id)" type="submit" data-bs-whatever="@getbootstrap">Add to favorites</button>
@@ -23,11 +22,4 @@
       </div>
     </div>
   </div>
-</div>
-
-<div class="container">
-  <button type="button" class="btn btn-primary mx-2" data-bs-toggle="modal" data-bs-target="#addBookModal" data-bs-whatever="@getbootstrap">Add new books</button>
-  <app-book-add-modal (addBookEvent)="onAddBook($event)"></app-book-add-modal>
-</div>
-
-
+</div> -->
