Change field to to appropriate the name in interface

--- a/src/app/comments/comments.component.html
+++ b/src/app/comments/comments.component.html
@@ -13,7 +13,7 @@
 
       <!-- Display comment details -->
       <div>
-        <!-- <h3>{{ comment.username }} ({{ comment.timestamp }})</h3> -->
+        <!-- <h3>{{ comment.author }} ({{ comment.timestamp }})</h3> -->
         <h3>({{ comment.timeStamp }})</h3>
         <p>{{ comment.commentText }}</p>
       </div>
