Hide recommendation if user isn't logged in

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,4 @@
     <router-outlet></router-outlet>
 </main>
 
-<app-recommended-books></app-recommended-books>
+<app-recommended-books *ngIf="authService.isLoggedIn()"></app-recommended-books>
